Update Chat with Opena AI - API .ipynb

--- a/Chat with Opena AI - API .ipynb
+++ b/Chat with Opena AI - API .ipynb
@@ -11,7 +11,7 @@
     "import openai\n",
     "\n",
     "# Load your API key from an environment variable or secret management service\n",
-    "openai.api_key = \"OPEN_Ai_KEY\"\n",
+    "openai.api_key = \"OPEN_AI_KEY\"\n",
     "\n",
     "# Generates a response using the OpenAI API \n",
     "response = openai.Completion.create(model=\"text-davinci-003\", prompt=\"Say this is a test\", temperature=0, max_tokens=7)\n",
